syntax = "proto3";
package ethermint.intertx.v1;

option go_package = "github.com/tharsis/ethermint/x/inter-tx/types";

import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";

// Msg defines the intertx Msg service.
service Msg {
  // Register defines a rpc handler for MsgRegisterAccount
  rpc RegisterAccount(MsgRegisterAccount) returns (MsgRegisterAccountResponse);
  // Register defines a rpc handler for RegisterAbstractAccount
  rpc RegisterAbstractAccount(MsgRegisterAbstractAccount) returns (MsgRegisterAccountResponse);
  // SubmitTx defines a rpc handler for MsgSubmitTx
  rpc SubmitTx(MsgSubmitTx) returns (MsgSubmitTxResponse);
  // SubmitEthereumTx defines a rpc handler for MsgSubmitEthereumTx
  rpc SubmitEthereumTx(MsgSubmitEthereumTx) returns (MsgSubmitTxResponse);
  // ForwardEthereumTx defines a rpc handler for MsgForwardEthereumTx
  rpc ForwardEthereumTx(MsgForwardEthereumTx) returns (MsgSubmitTxResponse);
}

// MsgRegisterAccount defines the payload for Msg/RegisterAccount
message MsgRegisterAccount {
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  string owner                      = 1;
  string connection_id              = 2 [(gogoproto.moretags) = "yaml:\"connection_id\""];
}

// MsgRegisterAccountResponse defines the response for Msg/RegisterAccount
message MsgRegisterAccountResponse {}

// MsgRegisterAbstractAccount defines the payload for Msg/RegisterAbstractAccount
message MsgRegisterAbstractAccount {
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  string owner                      = 1;
}

// MsgSubmitTx defines the payload for Msg/SubmitTx
message MsgSubmitTx {
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  string owner                       = 1;
  string connection_id = 2 [(gogoproto.moretags) = "yaml:\"connection_id\""];
  google.protobuf.Any msg            = 3;
}

// MsgSubmitTxResponse defines the response for Msg/SubmitTx
message MsgSubmitTxResponse {}

// MsgSubmitEthereumTx defines the payload for Msg/SubmitEthereumTx
message MsgSubmitEthereumTx {
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  string owner                       = 1;
  string connection_id = 2 [(gogoproto.moretags) = "yaml:\"connection_id\""];
  google.protobuf.Any msg            = 3;
}

// MsgForwardEthereumTx defines the payload for Msg/SubmitEthereumTx
message MsgForwardEthereumTx {
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  string owner                       = 1;
  google.protobuf.Any msg            = 2;
}
